Removing new SPI
Fixed #33043

Signed-off-by: Alexander Schwartz <aschwart@redhat.com>